[package]
name = "deaf"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
description = "A library for parsing and modifying ELF binaries"
homepage = "https://github.com/mjhouse/deaf"
repository = "https://github.com/mjhouse/deaf"
readme = "README.md"
keywords = [ "elf", "parse", "binary", "analysis" ]
categories = [  ]

[dependencies]
enumflags2 = "0.7.5"
num_enum = "0.5.9"
once_cell = "1.18.0"
thiserror = "1.0.38"

[dev-dependencies]
serial_test = "2.0.0"
